--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,9 @@
-portfolio
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>About Me<title>
+   </head>   
+<body>
+  <h1>About Me</h1>
+      </body>
+      </html>
