--- a/aboutme.html
+++ b/aboutme.html
@@ -5,5 +5,10 @@
    </head>   
 <body>
   <h1>About Me</h1>
-      </body>
+      <p> I am 17 years old born on March 17, 2000. I go to Animo Leadership.</p>
+      <ul> Things I do
+        <li>Sleep</li>
+        <li>eat</li>
+        <li>and breath</li>
+        </body>
       </html>
