--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>About Me<title>
+    <title>About Me</title>
    </head>   
 <body>
   <h1>About Me</h1>
