--- a/aboutme.html
+++ b/aboutme.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>About Me</title>
+    <title> About Me </title>
    </head>   
 <body>
   <h1>About Me</h1>
       <p> I am 17 years old born on March 17, 2000. I go to Animo Leadership.</p>
-      <ul> Things I do
+  <h2>Things I do</h2>
+  <ul>
         <li>Sleep</li>
         <li>eat</li>
   </ul>
