--- a/aboutme.html
+++ b/aboutme.html
@@ -5,6 +5,7 @@
    </head>   
 <body>
   <h1>About Me</h1>
+  <p> CECILIA DIAZ </p>
       <p> I am 17 years old born on March 17, 2000. I go to Animo Leadership.</p>
   <h2>Things I do</h2>
   <ul>
