--- a/aboutme.html
+++ b/aboutme.html
@@ -6,12 +6,24 @@
 <body>
   <h1>About Me</h1>
   <p> CECILIA DIAZ </p>
-      <p> I am 17 years old born on March 17, 2000. I go to Animo Leadership.</p>
+      <p> I am 17 years old born on March 17, 2000. I go to Animo Leadership. I live with my parents and three sisters.
+        I the second oldest, so I have a lot of responsiblities but it's ok.</p>
   <h2>Things I do</h2>
   <ul>
         <li>Sleep</li>
         <li>eat</li>
     <li> and Breath </li>
   </ul>
+  <h3> Likes </h3>
+  <ul>
+    <li> Food </li>
+    <li> KPOP </li>
+    <li> watermelon </li>
+  </ul>
+  <h4> Dislikes </h4>
+  <ul>
+    <li> random noises </li>
+    <li> cleaning </li>
+    <li> Starvation </li>
         </body>
       </html>
