--- a/aboutme.html
+++ b/aboutme.html
@@ -8,20 +8,22 @@
   <p> CECILIA DIAZ </p>
       <p> I am 17 years old born on March 17, 2000. I go to Animo Leadership. I live with my parents and three sisters.
         I the second oldest, so I have a lot of responsiblities but it's ok.</p>
+  <h2>Favorite Websites </h3>
+  <a href="https://mail.google.com/mail/" target="_blank">Gmail</a>
   <a href="https://www.youtube.com/" target="_blank"> Youtube </a>
-  <h2>Things I do</h2>
+  <h3>Things I do</h3>
   <ul>
         <li>Sleep</li>
         <li>eat</li>
     <li> and Breath </li>
   </ul>
-  <h3> Likes </h3>
+  <h4> Likes </h4>
   <ul>
     <li> Food </li>
     <li> KPOP </li>
     <li> watermelon </li>
   </ul>
-  <h4> Dislikes </h4>
+  <h5> Dislikes </h5>
   <ul>
     <li> random noises </li>
     <li> cleaning </li>
