--- a/aboutme.html
+++ b/aboutme.html
@@ -9,8 +9,10 @@
       <p> I am 17 years old born on March 17, 2000. I go to Animo Leadership. I live with my parents and three sisters.
         I the second oldest, so I have a lot of responsiblities but it's ok.</p>
   <h2>Favorite Websites </h2>
-  <p> <a href="https://mail.google.com/mail/" target="_blank"> Gmail </a> </p>
-  <p> <a href="https://www.youtube.com/" target="_blank"> Youtube </a> </p>
+  <a href="https://mail.google.com/mail/" target="_blank"> Gmail </a>
+  <p> 
+    <a href="https://www.youtube.com/" target="_blank"> Youtube </a>
+  </p>
   <h3>Things I do</h3>
   <ul>
         <li>Sleep</li>
