--- a/aboutme.html
+++ b/aboutme.html
@@ -5,10 +5,10 @@
    </head>   
 <body>
   <h1>About Me</h1>
-  <img src="https://www.google.com/search?q=silhouette&tbm=isch&imgil=VNYoQGk10brFGM%253A%253BhPd4n04Z-l9JLM%253Bhttp%25253A%25252F%25252Fwww.psdgraphics.com%25252Fpsd%25252Fcouple-silhouette-male-and-female-psd%25252F&source=iu&pf=m&fir=VNYoQGk10brFGM%253A%252ChPd4n04Z-l9JLM%252C_&usg=__BsWT4GHCc5VEdw61nERn7u9x4ak%3D" alt="persom"/>
+  <img src="" alt=""/>
   <p> CECILIA DIAZ </p>
       <p> I am 17 years old born on March 17, 2000. I go to Animo Leadership. I live with my parents and three sisters.
-        I the second oldest, so I have a lot of responsiblities but it's ok.</p>
+        <br/>I the second oldest, so I have a lot of responsiblities but it's ok.</p>
   <h2>Favorite Websites </h2>
   <a href="https://mail.google.com/mail/" target="_blank"> Gmail </a>
   <a href="https://www.youtube.com/" target="_blank"> Youtube </a>
