--- a/aboutme.html
+++ b/aboutme.html
@@ -5,17 +5,15 @@
    </head>   
 <body>
   <h1>About Me</h1>
+  <!--add image-->
   <p> CECILIA DIAZ </p>
       <p> I am 17 years old born on March 17, 2000. I go to Animo Leadership. I live with my parents and three sisters.<br/>I the second oldest, so I have a lot of responsiblities but it's ok.</p>
   <h2> Favorite Websites </h2>
   <a href="https://mail.google.com/mail/" target="_blank"> Gmail </a>
   <a href="https://www.youtube.com/" target="_blank"> Youtube </a>
-  <h3>Things I do</h3>
-  <ul>
-        <li>Sleep</li>
-        <li>eat</li>
-    <li> and Breath </li>
-  </ul>
+  <h3>Fun Fact about Me</h3>
+  <p> I am allergic to Maguey ,centuryplant. </p>
+  <!--add image-->
   <h4> Likes </h4>
   <ul>
     <li> Food </li>
