--- a/aboutme.html
+++ b/aboutme.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title> About Me </title>
+    <link href="/style.css" type="text/css" rel="stylesheet">
    </head>   
 <body>
   <h1>About Me</h1>
