--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title> About Me </title>
-     <link herf="hi.css" type= "text/css" rel="stylesheet">
+     <link herf=".css" type= "text/css" rel="stylesheet">
    </head>   
 <body>
   <h1>About Me</h1>
