--- a/aboutme.html
+++ b/aboutme.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style
     <title> About Me </title>
-     <link herf=".css" type= "text/css" rel="sheet">
    </head>   
 <body>
   <h1>About Me</h1>
