--- a/aboutme.html
+++ b/aboutme.html
@@ -27,7 +27,7 @@
     <li> cleaning </li>
     <li> Starvation </li>
   <h6> Reflection 6/27/17 </h6>
-  <p> I do not know any similarites Python and Scratch have because I was not here for Scratch :( .<br/> 
+  <p> I do not know any similarites Python and Scratch have because I was not here for Scratch. <br/> 
   Today was fun. I enjoyed drawing shapes on python. I was hard because I did not know where to start but plugging<br/>
   in random code help me understand. However, I still need a lot of practice. </p>
  
