--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,8 @@
   <h1>About Me</h1>
   <!--add image-->
   <p> CECILIA DIAZ </p>
-      <p> I am 17 years old born on March 17, 2000. I go to Animo Leadership. I live with my parents and three sisters.<br/>I the second oldest, so I have a lot of responsiblities but it's ok.</p>
+      <p> I am 17 years old born on March 17, 2000. I go to Animo Leadership. I live with my parents and three sisters.<br/>
+  I the second oldest, so I have a lot of responsiblities but it's ok.</p>
   <h2> Favorite Websites </h2>
   <a href="https://mail.google.com/mail/" target="_blank"> Gmail </a>
   <a href="https://www.youtube.com/" target="_blank"> Youtube </a>
