--- a/core4.html
+++ b/core4.html
@@ -4,12 +4,13 @@
   <title> Core4 </title>
   </head>
 <body>
-  <h1> Technical definition </h1>
+  <h1> Core4 </h1>
+  <h2> Technical definition </h2>
   <p> .... </p>
-  <h2> Real Life Example </h2>
+  <h3> Real Life Example </h3>
   <p> Maybe you can use this in a situation like if you you choose this one pth in life
   instead of the other, the outcome is different. </p>
-  <h3> Screenshot of phython </h3>
-  <img src="code.PNG" alt="phyton code" style="width:128px;height:128px;">
+  <h4> Screenshot of phython </h4>
+  <img src="code.PNG" alt="phyton code" style="width:148px;height:148px;">
   </body>
   
