--- a/core4.html
+++ b/core4.html
@@ -8,9 +8,9 @@
   <h2> Technical definition </h2>
   <p> .... </p>
   <h3> Real Life Example </h3>
-  <p> Maybe you can use this in a situation like if you you choose this one pth in life
+  <p> Maybe you can use this in a situation like if you you choose this one path in life
   instead of the other, the outcome is different. </p>
   <h4> Screenshot of phython </h4>
-  <img src="code.PNG" alt="phyton code" style="width:148px;height:148px;">
+  <img src="code.PNG" alt="phyton code" style="width:228px;height:228px;">
   </body>
   
