--- a/core4.html
+++ b/core4.html
@@ -11,6 +11,6 @@
   <p> Maybe you can use this in a situation like if you you choose this one path in life
   instead of the other, the outcome is different. </p>
   <h4> Screenshot of phython </h4>
-  <img src="code.PNG" alt="phyton code" style="width:228px;height:228px;">
+  <img src="code.PNG" alt="phyton code">
   </body>
   
