--- a/core4.html
+++ b/core4.html
@@ -3,7 +3,7 @@
   <head>
   <title> Core4 </title>
   </head>
-<body bgcolor="#E6E6FA">
+<body bgcolor="#RRGGBB">
   <h1> Core4 </h1>
   <h2> Technical definition </h2>
   <p> .... </p>
