--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <body bgcolor= "#66ffcc">
+  <body bgcolor= "#ffb3b3">
   <head>
     <title> About Me </title>
    </head>   
@@ -11,8 +11,10 @@
       <p> I am 17 years old born on March 17, 2000. I go to Animo Leadership. I live with my parents and three sisters.<br/>
   I the second oldest, so I have a lot of responsiblities but it's ok.</p>
   <h2> Favorite Websites </h2>
-  <a href="https://mail.google.com/mail/" target="_blank"> Gmail </a>
-  <a href="https://www.youtube.com/" target="_blank"> Youtube </a>
+  <p>
+    <a href="https://mail.google.com/mail/" target="_blank"> Gmail </a></p>
+  <p>
+    <a href="https://www.youtube.com/" target="_blank"> Youtube </a></P>
   <h3>Fun Fact about Me</h3>
   <p> I am allergic to Maguey, centuryplant. </p>
   <!--add image-->
@@ -27,12 +29,13 @@
     <li> random noises </li>
     <li> cleaning </li>
     <li> Starvation </li>
-    <font size="30">
+    <font size="50">
   <h6> Reflection 6/27/17 </h6></font>
   <p> I do not know any similarites Python and Scratch have because I was not here for Scratch. <br/> 
   Today was fun. I enjoyed drawing shapes on python. I was hard because I did not know where to start but plugging<br/>
   in random code help me understand. However, I still need a lot of practice. </p>
-    <h7> Reflection 6/30/17 </h7>
+    <font size="50">
+      <h7> Reflection 6/30/17 </h7></font>
     <p> I think I worked better in the group that many people didn't know alot like me because I didn't feel lost. <br/>
       When other people dont understand forces me to learn so I actually ask for help. if that makes sense.. </p>
  
