--- a/aboutme.html
+++ b/aboutme.html
@@ -17,6 +17,7 @@
     <a href="https://www.youtube.com/" target="_blank"> Youtube </a></P>
   <h3>Fun Fact about Me</h3>
   <p> I am allergic to Maguey, centuryplant. </p>
+    <p> <img src="jackson-wang.jpg" alt="jackson"> </p>
   <!--add image-->
   <h4> Likes </h4>
   <ul>
