--- a/aboutme.html
+++ b/aboutme.html
@@ -39,6 +39,8 @@
       <h7> Reflection 6/30/17 </h7></font>
     <p> I think I worked better in the group that many people didn't know alot like me because I didn't feel lost. <br/>
       When other people dont understand forces me to learn so I actually ask for help. if that makes sense.. </p>
+    <p> However, having some who knows what they are doing also helps because I learned new things I didn't know... so either <br/>
+      so either way it was good.
  
         </body>
       </html>
