--- a/aboutme.html
+++ b/aboutme.html
@@ -36,7 +36,7 @@
   Today was fun. I enjoyed drawing shapes on python. I was hard because I did not know where to start but plugging<br/>
   in random code help me understand. However, I still need a lot of practice. </p>
     <font size="10">
-      <h7> Reflection 6/30/17 </h7></font>
+      <b><h7> Reflection 6/30/17 </h7></b></font>
     <p> I think I worked better in the group that many people didn't know alot like me because I didn't feel lost. <br/>
       When other people dont understand forces me to learn so I actually ask for help. if that makes sense.. </p>
     <p> However, having some who knows what they are doing also helps because I learned new things I didn't know... so either <br/>
