--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
 <body>
   <h1>About Me</h1>
   <!--add image-->
-  <p> CECILIA DIAZ </p>
+  <p><b> CECILIA DIAZ </b></p>
       <p> I am 17 years old born on March 17, 2000. I go to Animo Leadership. I live with my parents and three sisters.<br/>
   I the second oldest, so I have a lot of responsiblities but it's ok.</p>
   <h2> Favorite Websites </h2>
