--- a/aboutme.html
+++ b/aboutme.html
@@ -40,6 +40,15 @@
       When other people dont understand forces me to learn so I actually ask for help. if that makes sense.. </p>
     <p> However, having some who knows what they are doing also helps because I learned new things I didn't know... so either <br/>
       so either way it was good.
- 
+      <h8>Reflection 7/5/17 </h8>
+    <p> My idea of robot changed because I realize Robots can also be operated by humans, as long as they preform their purpose. <br/>
+      I am exicted for the future because engineers have the ability to invent many things to improve the world. However, I am scared at 
+      <br/> at the same time of the outcome and if an invention will have a negative effect.</p>
+    <p> Things that worked well was that I didn't control the work because I already done something similar to this. I will also contibute
+      <br/> but at the same time let my group figure it out. </p>
+      <p> <img src="20170705_152159.jpg" alt="breadboard"  width="128" height="128"> </p>
+    <p> what we did was a series circuit which means if one of the LEDs was taken out the other LED wouldn't work. In our circuit we
+      <br/> used a button and this button acted like a door, when the button was pressed the LEDs were turn on but when it was not pressed
+      <br/> they remained off. </p>
         </body>
       </html>
