--- a/aboutme.html
+++ b/aboutme.html
@@ -40,7 +40,8 @@
       When other people dont understand forces me to learn so I actually ask for help. if that makes sense.. </p>
     <p> However, having some who knows what they are doing also helps because I learned new things I didn't know... so either <br/>
       so either way it was good.
-      <h8>Reflection 7/5/17 </h8>
+      <font size="50">
+        <h8> Reflection 7/5/17 </h8></font>
     <p> My idea of robot changed because I realize Robots can also be operated by humans, as long as they preform their purpose. <br/>
       I am exicted for the future because engineers have the ability to invent many things to improve the world. However, I am scared at 
       <br/> at the same time of the outcome and if an invention will have a negative effect.</p>
