--- a/aboutme.html
+++ b/aboutme.html
@@ -39,7 +39,7 @@
     <p> I think I worked better in the group that many people didn't know alot like me because I didn't feel lost. <br/>
       When other people dont understand forces me to learn so I actually ask for help. if that makes sense.. </p>
     <p> However, having some who knows what they are doing also helps because I learned new things I didn't know... so either <br/>
-      so either way it was good.
+      so either way it was good. </p>
       <font size="50">
         <h8> Reflection 7/5/17 </h8></font>
     <p> My idea of robot changed because I realize Robots can also be operated by humans, as long as they preform their purpose. <br/>
