--- a/aboutme.html
+++ b/aboutme.html
@@ -32,25 +32,7 @@
     <li> Starvation </li>
     <font size="50">
   <h6> Reflection 6/27/17 </h6></font>
-  <p> I do not know any similarites Python and Scratch have because I was not here for Scratch. <br/> 
-  Today was fun. I enjoyed drawing shapes on python. I was hard because I did not know where to start but plugging<br/>
-  in random code help me understand. However, I still need a lot of practice. </p>
-      <b><h7> Reflection 6/30/17 </h7></b>
-    <p> I think I worked better in the group that many people didn't know alot like me because I didn't feel lost. <br/>
-      When other people dont understand forces me to learn so I actually ask for help. if that makes sense.. </p>
-    <p> However, having some who knows what they are doing also helps because I learned new things I didn't know... so either <br/>
-      so either way it was good. </p>
-      <font size="50">
-        <h8> Reflection 7/5/17 </h8></font>
-    <a href="reflection.html">Visit our HTML tutorial</a>
-    <p> My idea of robot changed because I realize Robots can also be operated by humans, as long as they preform their purpose. <br/>
-      I am exicted for the future because engineers have the ability to invent many things to improve the world. However, I am scared at 
-      <br/> at the same time of the outcome and if an invention will have a negative effect.</p>
-    <p> Things that worked well was that I didn't control the work because I already done something similar to this. I will also contibute
-      <br/> but at the same time let my group figure it out. </p>
-      <p> <img src="20170705_152159.jpg" alt="breadboard"  width="128" height="128"> </p>
-    <p> what we did was a series circuit which means if one of the LEDs was taken out the other LED wouldn't work. In our circuit we
-      <br/> used a button and this button acted like a door, when the button was pressed the LEDs were turn on but when it was not pressed
-      <br/> they remained off. </p>
+    <a href="reflection.html">Reflections GWC</a>
+  
         </body>
       </html>
