--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,9 @@
    </head>   
 <body>
   <h1>About Me</h1>
-    <a href="https://www.instagram.com/p/BUFgUnnAtFSRM1c6gg2mWQq4WywBeeGNP-lj-k0/?taken-by=miracle.ceci" </a>
+  <p>
+    <img src= "https://www.instagram.com/p/BUFgUnnAtFSRM1c6gg2mWQq4WywBeeGNP-lj-k0/?taken-by=miracle.ceci">
+    </p>
   <p><b> CECILIA DIAZ </b></p>
       <p> I am 17 years old born on March 17, 2000. I go to Animo Leadership. I live with my parents and three sisters.<br/>
   I the second oldest, so I have a lot of responsiblities but it's ok.</p>
