--- a/reflection.html
+++ b/reflection.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
-  <body bgcolor= "#D8F6CE">
-  <head>
+  <div style="background:white url(http://www.html.am/images/backgrounds/background-image-2.gif) repeat fixed;width:300px;height:200px;">HTML background code example</div>
+<head>
     <title> Reflections GWC </title>
   </head>
 <body>
