--- a/reflection.html
+++ b/reflection.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en"
-  <div style="background:white url(http://www.html.am/images/backgrounds/background-image-2.gif) repeat fixed;width:300px;height:200px;">HTML background code example</div>
+ <body bgcolor= "6AF9E6">
 <head>
     <title> Reflections GWC </title>
   </head>
-<body>
-  <font size="50">
-  <h1> Reflection GWC </h1></font>
+<body style="color:white;">
+  <font size="20">
+  <h1 > Reflection GWC </h1></font>
   <h2> Reflection 6/27/17 </h2>
     <p> I do not know any similarites Python and Scratch have because I was not here for Scratch. <br/> 
       Today was fun. I enjoyed drawing shapes on python. I was hard because I did not know where to start but plugging<br/>
