--- a/reflection.html
+++ b/reflection.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"
- <body bgcolor= "6AF9E6">
+ <body bgcolor= "33CCCC">
 <head>
     <title> Reflections GWC </title>
   </head>
