--- a/reflection.html
+++ b/reflection.html
@@ -4,7 +4,7 @@
 <head>
     <title> Reflections GWC </title>
   </head>
-<body style="color:white;">
+<body style="color:blue;">
   <font size="20">
   <h1 > Reflection GWC </h1></font>
   <h2> Reflection 6/27/17 </h2>
