--- a/reflection.html
+++ b/reflection.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"
- <body bgcolor= "#ffb3b3">
+ <body bgcolor= "#66ffe0">
 <head>
     <title> Reflections GWC </title>
   </head>
