--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
   <p>
     <img src= "https://www.instagram.com/p/BUFgUnnAtFSRM1c6gg2mWQq4WywBeeGNP-lj-k0/?taken-by=miracle.ceci">
     </p>
-  <p><b> CECILIA DIAZ </b></p>
+  <center><b> CECILIA DIAZ </b></center>
       <p> I am 17 years old born on March 17, 2000. I go to Animo Leadership. I live with my parents and three sisters.<br/>
   I the second oldest, so I have a lot of responsiblities but it's ok.</p>
   <h2> Favorite Websites </h2>
