--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
     <title> About Me </title>
    </head>   
 <body>
-  <h1>About Me</h1>
+  <center><h1>About Me</h1></center>
   <p>
     <img src= "https://www.instagram.com/p/BUFgUnnAtFSRM1c6gg2mWQq4WywBeeGNP-lj-k0/?taken-by=miracle.ceci">
     </p>
@@ -17,7 +17,7 @@
     <a href="https://mail.google.com/mail/" target="_blank"> Gmail </a></p>
   <p>
     <a href="https://www.youtube.com/" target="_blank"> Youtube </a></P>
-  <h3>Fun Fact about Me</h3>
+    <center><h3>Fun Fact about Me</h3></center>
   <p> I am allergic to Maguey, centuryplant. </p>
     <p> <img src="jackson-wang.jpg" alt="jackson"  width="128" height="128"> </p>
   <!--add image-->
