--- a/aboutme.html
+++ b/aboutme.html
@@ -17,23 +17,22 @@
     <a href="https://mail.google.com/mail/" target="_blank"> Gmail </a></p>
   <p>
     <a href="https://www.youtube.com/" target="_blank"> Youtube </a></P>
-    <center><h3>Fun Fact about Me</h3></center>
+    <center><h2>Fun Fact about Me</h2></center>
   <p> I am allergic to Maguey, centuryplant. </p>
     <p> <img src="jackson-wang.jpg" alt="jackson"  width="128" height="128"> </p>
   <!--add image-->
-  <h4> Likes </h4>
+  <h2> Likes </h2>
   <ul>
     <li> Food </li>
     <li> KPOP </li>
     <li> watermelon </li>
   </ul>
-  <h5> Dislikes </h5>
+  <h2> Dislikes </h2>
   <ul>
     <li> random noises </li>
     <li> cleaning </li>
     <li> Starvation </li>
-    <font size="50">
-  <h6> Reflection 6/27/17 </h6></font>
+  <h2> Reflection 6/27/17 </h2>
     <a href="reflection.html">Reflections GWC</a>
   
         </body>
