--- a/reflection.html
+++ b/reflection.html
@@ -5,18 +5,17 @@
     <title> Reflections GWC </title>
   </head>
 <body>
-  <font size="20">
-  <h1 > Reflection GWC </h1></font>
+  <h1 > Reflection GWC </h1>
   <h2> Reflection 6/27/17 </h2>
     <p> I do not know any similarites Python and Scratch have because I was not here for Scratch. <br/> 
       Today was fun. I enjoyed drawing shapes on python. I was hard because I did not know where to start but plugging<br/>
       in random code help me understand. However, I still need a lot of practice. </p>
-  <h3> Reflection 6/30/17 </h3>
+  <h2> Reflection 6/30/17 </h2>
     <p> I think I worked better in the group that many people didn't know alot like me because I didn't feel lost. <br/>
       When other people dont understand forces me to learn so I actually ask for help. if that makes sense.. </p>
     <p> However, having some who knows what they are doing also helps because I learned new things I didn't know... so either <br/>
       so either way it was good. </p>
-  <h4> Reflection 7/5/17 </h4>
+  <h2> Reflection 7/5/17 </h2>
     <p> My idea of robot changed because I realize Robots can also be operated by humans, as long as they preform their purpose. <br/>
       I am exicted for the future because engineers have the ability to invent many things to improve the world. However, I am scared at 
       <br/> at the same time of the outcome and if an invention will have a negative effect.</p>
