--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
 <body>
   <center><h1>About Me</h1></center>
   <p>
-    <img src= "https://www.instagram.com/p/BUFgUnnAtFSRM1c6gg2mWQq4WywBeeGNP-lj-k0/?taken-by=miracle.ceci">
+    <img src= "ceci.PNG" alt="ceci">
     </p>
   <center><b> CECILIA DIAZ </b></center>
       <p> I am 17 years old born on March 17, 2000. I go to Animo Leadership. I live with my parents and three sisters.<br/>
