--- a/aboutme.html
+++ b/aboutme.html
@@ -7,9 +7,9 @@
 <body>
   <center><h1>About Me</h1></center>
   <p>
-    <img src= "ceci.PNG" alt="ceci">
+    <center><img src= "ceci.PNG" alt="ceci"></center>
     </p>
-  <center><b> CECILIA DIAZ </b></center>
+  <center><h1> CECILIA DIAZ </h1></center>
       <p> I am 17 years old born on March 17, 2000. I go to Animo Leadership. I live with my parents and three sisters.<br/>
   I the second oldest, so I have a lot of responsiblities but it's ok.</p>
   <h2> Favorite Websites </h2>
