--- a/core4.html
+++ b/core4.html
@@ -6,11 +6,14 @@
 <body bgcolor="#E6E6FA">
   <h1> Core4 </h1>
   <h2> Technical definition </h2>
-  <p> .... </p>
+    <p> Variables: word that represents something<br/>
+    Function: reads definition in a word/function<br/>
+    loops: repeats a code
+    conditionals: executes code if condition is made</p>
   <h3> Real Life Example </h3>
-  <p> Maybe you can use this in a situation like if you you choose this one path in life
-  instead of the other, the outcome is different. </p>
+    <p> Maybe you can use this in a situation like if you you choose this one path in life
+    instead of the other, the outcome is different. </p>
   <h4> Screenshot of phython </h4>
-  <img src="code3.PNG" alt="phyton code">
+    <img src="code3.PNG" alt="phyton code">
   </body>
   
