--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,8 @@
   <head>
    <style>
      body{background-image:url("https://s-media-cache-ak0.pinimg.com/236x/74/4c/e6/744ce6f62b4f8de089d9f87ab7a856fc--cellphone-wallpaper-phone-wallpapers.jpg")}
-    <title> About Me </title>
+    </style>
+     <title> About Me </title>
    </head>   
 <body>
   <center><h1>About Me</h1></center>
