--- a/aboutme.html
+++ b/aboutme.html
@@ -5,22 +5,21 @@
      <title> About Me </title>
    </head>   
 <body>
-  <center><h1>About Me</h1></center>
+  <center><h1>About Me</h1>
   <p>
-    <center><img src= "ceci.PNG" alt="ceci"></center>
+    <img src= "ceci.PNG" alt="ceci">
     </p>
-  <center><h1> CECILIA DIAZ </h1></center>
-      <p> I am 17 years old born on March 17, 2000. I go to Animo Leadership. I live with my parents and three sisters.<br/>
-  I the second oldest, so I have a lot of responsiblities but it's ok.</p>
-  <h2> Favorite Websites </h2>
+  <h1> CECILIA DIAZ </h1>
+     <p> I am 17 years old born on March 17, 2000. I go to Animo Leadership. I live with my parents and three sisters.<br/>
+       I the second oldest, so I have a lot of responsiblities but it's ok.</p></center>
+  <center><h2> Favorite Websites </h2>
   <p>
     <a href="https://mail.google.com/mail/" target="_blank"> Gmail </a></p>
   <p>
     <a href="https://www.youtube.com/" target="_blank"> Youtube </a></P>
-    <center><h2>Fun Fact about Me</h2></center>
-  <p> I am allergic to Maguey, centuryplant. </p>
+  <h2>Fun Fact about Me</h2>
+    <p> I am allergic to Maguey, centuryplant. </p>
     <p> <img src="jackson-wang.jpg" alt="jackson"  width="128" height="128"> </p>
-  <!--add image-->
   <h2> Likes </h2>
   <ul>
     <li> Food </li>
@@ -33,7 +32,7 @@
     <li> cleaning </li>
     <li> Starvation </li>
   <h2> Reflection 6/27/17 </h2>
-    <a href="reflection.html">Reflections GWC</a>
+    <a href="reflection.html">Reflections GWC</a></center>
   
         </body>
       </html>
