--- a/aboutme.html
+++ b/aboutme.html
@@ -21,16 +21,15 @@
     <p> I am allergic to Maguey, centuryplant. </p>
     <p> <img src="jackson-wang.jpg" alt="jackson"  width="128" height="128"> </p>
   <h2> Likes </h2>
-  <ul>
-    <li> Food </li>
-    <li> KPOP </li>
-    <li> watermelon </li>
+    <p> * Food </p>
+    <p> * KPOP </p>
+    <p> * watermelon </p>
   </ul>
   <h2> Dislikes </h2>
   <ul>
-    <li> random noises </li>
-    <li> cleaning </li>
-    <li> Starvation </li>
+    <p> * random noises </p>
+    <p> * cleaning </p>
+    <p> * Starvation </p>
   <h2> Reflection 6/27/17 </h2>
     <a href="reflection.html">Reflections GWC</a></center>
   
