--- a/aboutme.html
+++ b/aboutme.html
@@ -31,7 +31,8 @@
     <p> * cleaning </p>
     <p> * Starvation </p>
   <h2> Reflection 6/27/17 </h2>
-    <a href="reflection.html">Reflections GWC</a></center>
-  
+    <a href="reflection.html">Reflections GWC</a>
+   <h2> Core4 </h2>
+    <a href="core4.html">Core4 GWC</a></center>
         </body>
       </html>
