--- a/aboutme.html
+++ b/aboutme.html
@@ -2,10 +2,15 @@
 <html lang="en">
   <body bgcolor= "#ffb3b3">
   <head>
+    <style>
+p {
+    text-align: center;
+} 
+</style>
      <title> About Me </title>
    </head>   
 <body>
-  <center><h1>About Me</h1>
+  <h1>About Me</h1>
   <p>
     <img src= "ceci.PNG" alt="ceci">
     </p>
@@ -21,18 +26,20 @@
     <p> I am allergic to Maguey, centuryplant. </p>
     <p> <img src="jackson-wang.jpg" alt="jackson"  width="128" height="128"> </p>
   <h2> Likes </h2>
-    <p> * Food </p>
-    <p> * KPOP </p>
-    <p> * watermelon </p>
+   <ul>
+    <li> Food </li>
+    <li> KPOP </li>
+    <li> watermelon </li>
   </ul>
   <h2> Dislikes </h2>
   <ul>
-    <p> * random noises </p>
-    <p> * cleaning </p>
-    <p> * Starvation </p>
+    <li> random noises </li>
+    <li> cleaning </li>
+    <li> Starvation </li>
+    </ul>
   <h2> Reflection 6/27/17 </h2>
     <a href="reflection.html">Reflections GWC</a>
    <h2> Core4 </h2>
-    <a href="core4.html">Core4 GWC</a></center>
+    <a href="core4.html">Core4 GWC</a>
         </body>
       </html>
