--- a/aboutme.html
+++ b/aboutme.html
@@ -10,36 +10,36 @@
      <title> About Me </title>
    </head>   
 <body>
-  <h1 style=""background-color:white">About Me</h1>
+  <h1 style="background-color:white">About Me</h1>
   <p>
     <img src= "ceci.PNG" alt="ceci">
     </p>
-  <h1 style=""background-color:white"> CECILIA DIAZ </h1>
+  <h1 style="background-color:white"> CECILIA DIAZ </h1>
      <p> I am 17 years old born on March 17, 2000. I go to Animo Leadership. I live with my parents and three sisters.<br/>
        I the second oldest, so I have a lot of responsiblities but it's ok.</p>
-  <h2 style=""background-color:white"> Favorite Websites </h2>
+  <h2 style="background-color:white"> Favorite Websites </h2>
   <p>
     <a href="https://mail.google.com/mail/" target="_blank"> Gmail </a></p>
   <p>
     <a href="https://www.youtube.com/" target="_blank"> Youtube </a></P>
-  <h2 style=""background-color:white">Fun Fact about Me</h2>
+  <h2 style="background-color:white">Fun Fact about Me</h2>
     <p> I am allergic to Maguey, centuryplant. </p>
     <p> <img src="jackson-wang.jpg" alt="jackson"  width="128" height="128"> </p>
-  <h2 style=""background-color:white"> Likes </h2>
+  <h2 style="background-color:white"> Likes </h2>
    <ul>
     <li> Food </li>
     <li> KPOP </li>
     <li> watermelon </li>
   </ul>
-  <h2 style=""background-color:white"> Dislikes </h2>
+  <h2 style="background-color:white"> Dislikes </h2>
   <ul>
     <li> random noises </li>
     <li> cleaning </li>
     <li> Starvation </li>
     </ul>
-  <h2 style=""background-color:white"> Reflection 6/27/17 </h2>
+  <h2 style="background-color:white"> Reflection 6/27/17 </h2>
     <a href="reflection.html">Reflections GWC</a>
-   <h2 style=""background-color:white"> Core4 </h2>
+   <h2 style="background-color:white"> Core4 </h2>
     <a href="core4.html">Core4 GWC</a>
         </body>
       </html>
