--- a/aboutme.html
+++ b/aboutme.html
@@ -3,9 +3,15 @@
   <body bgcolor= "#ffb3b3">
   <head>
     <style>
-* {
+h1,h2 {
     text-align: center;
-} 
+}
+        p, ul,li {
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-right: 150px;
+    margin-left: 80px;
+}
 </style>
      <title> About Me </title>
    </head>   
