--- a/aboutme.html
+++ b/aboutme.html
@@ -3,10 +3,10 @@
   <body bgcolor= "#ffb3b3">
   <head>
     <style>
-h1,h2 {
+h1,h2,img {
     text-align: center;
 }
-        p, ul,li {
+        p, ul,li,a {
     margin-top: 10px;
     margin-bottom: 10px;
     margin-right: 150px;
