--- a/reflection.html
+++ b/reflection.html
@@ -25,5 +25,12 @@
     <p> what we did was a series circuit which means if one of the LEDs was taken out the other LED wouldn't work. In our circuit we
       <br/> used a button and this button acted like a door, when the button was pressed the LEDs were turn on but when it was not pressed
       <br/> they remained off. </p>
+ <h2> Reflection 7/10/17 </h2>
+   <p> I didn't learn nothing new about circuits...</p>
+
+   <p> My favorite part of the Robot dance it seeing my baby working. It was so cute with the lights. My team worked <br/>
+    hard on the code, so seeing it work properly was a relief.</p>
+
+   <p>Manuela Veloso and Ayanna need the servo output. They need this because they are working on making robots move.</p>
      </body>
    </html>
