--- a/reflection.html
+++ b/reflection.html
@@ -27,10 +27,13 @@
       <br/> they remained off. </p>
  <h2> Reflection 7/10/17 </h2>
    <p> I didn't learn nothing new about circuits...</p>
-
    <p> My favorite part of the Robot dance it seeing my baby working. It was so cute with the lights. My team worked <br/>
     hard on the code, so seeing it work properly was a relief.</p>
-
    <p>Manuela Veloso and Ayanna need the servo output. They need this because they are working on making robots move.</p>
+ <h2> Reflection 7/12/17 </h2>
+   <p> I learned how to use a infrared light with the ardunino robot. We used else if to use the light; when it saw the light <br/>
+   (0) it would react. If it didnt see nothing (1) it would continue forward. Our group worked well we were able to solve <br/>
+    the problems that we faced by brainstorming ideas. </p>
+ <p> <img src=" "> </p>
      </body>
    </html>
