--- a/reflection.html
+++ b/reflection.html
@@ -25,6 +25,10 @@
     <p> what we did was a series circuit which means if one of the LEDs was taken out the other LED wouldn't work. In our circuit we
       <br/> used a button and this button acted like a door, when the button was pressed the LEDs were turn on but when it was not pressed
       <br/> they remained off. </p>
+ <h2> Reflection 7/7/17 </h2>
+   <p> The internet is a network of servers and devices that allows users to access a website. <br/>
+I think that LaTex is a programming language because it uses documents and html uses document.
+    I mean I don't know but im guessing </p>
  <h2> Reflection 7/10/17 </h2>
    <p> I didn't learn nothing new about circuits...</p>
    <p> My favorite part of the Robot dance it seeing my baby working. It was so cute with the lights. My team worked <br/>
