--- a/reflection.html
+++ b/reflection.html
@@ -21,6 +21,7 @@
       <br/> at the same time of the outcome and if an invention will have a negative effect.</p>
     <p> Things that worked well was that I didn't control the work because I already done something similar to this. I will also contibute
       <br/> but at the same time let my group figure it out. </p>
+ <h2> Reflection 7/6/17 </h2>
       <p> <img src="20170705_152159.jpg" alt="breadboard"  width="128" height="128"> </p>
     <p> what we did was a series circuit which means if one of the LEDs was taken out the other LED wouldn't work. In our circuit we
       <br/> used a button and this button acted like a door, when the button was pressed the LEDs were turn on but when it was not pressed
@@ -38,6 +39,8 @@ I think that LaTex is a programming language because it uses documents and html 
    <p> I learned how to use a infrared light with the ardunino robot. We used else if to use the light; when it saw the light <br/>
    (0) it would react. If it didnt see nothing (1) it would continue forward. Our group worked well we were able to solve <br/>
     the problems that we faced by brainstorming ideas. </p>
- <p> <img src=" "> </p>
+  <p> <img src=" "> </p>
+ <h2> Reflection 7/13/17 </h2>
+   <p> I would like to add moving images to my Django site like for DISQUS. I would like to have a menu that scrolls down with user. </p>
      </body>
    </html>
