--- a/reflection.html
+++ b/reflection.html
@@ -42,5 +42,11 @@ I think that LaTex is a programming language because it uses documents and html 
   <p> <img src=" "> </p>
  <h2> Reflection 7/13/17 </h2>
    <p> I would like to add moving images to my Django site like for DISQUS. I would like to have a menu that scrolls down with user. </p>
-     </body>
+ <h2> Reflection 7/17/17 </h2>
+  <p> A lot of information is available about me in the internet. It is availabe because it is information available to the public. </p>
+  <p> They can protect their name and a few thing like imporant accounts and passwords. Latanya and Shafi make programas that will protect their priavecy. </p>
+ <h2> Reflection 7/18/17 </h2>
+ <p>  The data was interesting I found it fun. </p>
+ 
+</body>
    </html>
