--- a/reflection.html
+++ b/reflection.html
@@ -47,6 +47,22 @@ I think that LaTex is a programming language because it uses documents and html 
   <p> They can protect their name and a few thing like imporant accounts and passwords. Latanya and Shafi make programas that will protect their priavecy. </p>
  <h2> Reflection 7/18/17 </h2>
  <p>  The data was interesting I found it fun. </p>
+ <p> Computers are more powerful than humans and they are able to save data because they are smart.</p>
+ <h2> Reflection 7/19/17 </h2>
+  <p> I am proud not what I figured out but what I did with it. I made a diagram that was able to demonstart the way division works.</p>
+  <p> The one that was interesting was the one that made a path with letters and numbers because I would look for the shorter path.</p>
+  <p> My algorithms connected to Alicia Abella because I would break down something </p>
+  <h2> Reflection 7/25/17 </h2>
+ <p> I would listen to everyone's opinion to be a better leader.</p>
+ <p>Not being afraid to ask questions will help strenghten my skill </p>
+ <p>Doing a Kanba board will help know or progress and what need to finish </p>
+ <p> We all are incharge of pages and we check each others works </p>
+ <h2> Reflection 7/28/17 </h2>
+ <p> We already completed most of it, so we are right on track. One thing we where not able to figure out was the flashing images
+ because we don't know the code.</p>
+ <p> I think we should talk amoungs ourselves and actually know what everyone is doing because sometimes I didn't know what my partners where doing.</p>
+ <p> I think we should update having more options like questions because we have time to make those improvements.
+ </p> 
  
 </body>
    </html>
